[gd_scene load_steps=13 format=2]

[ext_resource path="res://Chars/Pawn.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/craft_area.png" type="Texture" id=2]
[ext_resource path="res://assets/New.png" type="Texture" id=3]
[ext_resource path="res://states/FSM.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player/Idle.gd" type="Script" id=5]
[ext_resource path="res://Player/Sleep.gd" type="Script" id=6]
[ext_resource path="res://Player/Collecting.gd" type="Script" id=7]
[ext_resource path="res://Player/Player.gd" type="Script" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 100.0

[sub_resource type="Animation" id=2]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 31.1473

[sub_resource type="CircleShape2D" id=4]
radius = 60.0

[node name="Player" instance=ExtResource( 1 )]
z_index = 4
collision_mask = 15
script = ExtResource( 8 )

[node name="Camera2D" parent="." index="0"]
current = true
smoothing_enabled = true

[node name="BuildArea" type="Area2D" parent="." index="2"]
visible = false
__meta__ = {
"_edit_group_": true
}

[node name="Shape" type="CollisionShape2D" parent="BuildArea" index="0"]
show_behind_parent = true
shape = SubResource( 1 )

[node name="BuildSprite" type="Sprite" parent="BuildArea" index="1"]
modulate = Color( 0, 1, 0.929412, 0.333333 )
position = Vector2( 1.14441e-05, -7.62939e-06 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="." index="3"]
texture = ExtResource( 3 )
hframes = 3
frame = 1

[node name="ColorRect" type="ColorRect" parent="Sprite" index="0"]
visible = false
margin_left = -30.0
margin_top = -30.0
margin_right = 30.0
margin_bottom = 30.0
color = Color( 1, 1, 1, 0.254902 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]
playback_speed = 0.5
anims/idle = SubResource( 2 )

[node name="Shape" type="CollisionShape2D" parent="." index="5"]
visible = false
shape = SubResource( 3 )

[node name="FSM" parent="." index="6" instance=ExtResource( 4 )]
debug = true

[node name="Idle" type="Node" parent="FSM" index="0"]
script = ExtResource( 5 )

[node name="Sleep" type="Node" parent="FSM" index="1"]
script = ExtResource( 6 )

[node name="Collecting" type="Node" parent="FSM" index="2"]
script = ExtResource( 7 )

[node name="CollectionArea" type="Area2D" parent="." index="7"]

[node name="Shape" type="CollisionShape2D" parent="CollectionArea" index="0"]
modulate = Color( 1, 0, 1, 1 )
shape = SubResource( 4 )

[node name="CollisionShape2D" parent="CommRange" index="0"]
position = Vector2( -2, 0 )
[connection signal="area_entered" from="CollectionArea" to="." method="enter_collectable_area"]
[connection signal="area_exited" from="CollectionArea" to="." method="exit_collectable_area"]
